# Time-Tabling

./: CMakeLists.txt  README.md  courseform.cpp  courseform.h  courseform.ui  forminsertprof.cpp  forminsertprof.h  forminsertprof.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  professorform.cpp  professorform.h  professorform.ui  reorganizar_proyecto.sh  secondwindow.cpp  secondwindow.h  secondwindow.ui  sectionwindow.cpp  sectionwindow.h  test_data.json  test_data_manager.cpp  test_flow_network.cpp
include/: Course.hpp  Preferences.hpp  Professor.hpp  Section.hpp  Settings.hpp  course.hpp  data_manager.hpp  flow_network.hpp  flow_node.hpp  preference.hpp  preferences.hpp  professor.hpp  professor_time_node.hpp  section.hpp  section_demand_node.hpp  section_time_node.hpp  settings.hpp
include/core/: course.hpp  preference.hpp  professor.hpp  section.hpp
include/flow/: flow_network.hpp  flow_node.hpp  level_time_node.hpp  professor_time_node.hpp  section_demand_node.hpp  section_time_node.hpp
src/: Professor.cpp  Section.cpp  course.cpp  data_manager.cpp  flow_network.cpp  flow_node.cpp  level_time_node.cpp  preference.cpp  preferences.cpp  professor.cpp  professor_time_node.cpp  section.cpp  section_demand_node.cpp  section_time_node.cpp
src/core/: course.cpp  data_manager.cpp  preference.cpp  professor.cpp  section.cpp
src/flow/: flow_network.cpp  flow_node.cpp  level_time_node.cpp  professor_time_node.cpp  section_demand_node.cpp  section_time_node.cpp
src/gui/: courseform.cpp  courseform.h  mainwindow.cpp  mainwindow.h  professorform.cpp  professorform.h  sectionwindow.cpp  sectionwindow.h
ui/: mainwindow.ui  sectionwindow.ui
